# project-carac

./: .gitignore  README.md
.github/workflows/: rust.yml
client/: .gitignore  pyproject.toml
client/src/carac/: defs.py  helpers.py  instructions.py  motion.py  orchestrator.py  prelude.py  tui.py
client/src/experiments/: attack_rotation.py  axis.py  coupled_axis.py  free_flight.py  plunge.py
client/src/experiments/misc/: actuate_drone.py  axis_test.py  stop_drone.py
client/src/pipeline/: __main__.py  config.py  dataframe.py  dataset.py  defs.py  process.py  utils.py  worker.py
client/src/pipeline/data/: changes.py  datasets.py  parameter.py  utils.py
client/src/pipeline/model/: __init__.py  dyn_casadi_mod_ele_dot_3D.py
client/src/report/: actuation_violin.py  attack_rotation.py  common.py  defs.py  lift_drag.py  moments.py  networks.py  networks_multi.py  param_distribution.py  shift.py  view.py
client/src/report/lib/: export.py  plotting.py
client/src/report/misc/: rotation_animation.py
client/src/report/plot/: actuation_violin.py  attack_rotation.py  defs.py  fast_pitch.py  lift_drag.py  lift_drag_all.py  model.py  moments.py  networks.py  networks_multi.py  param_distribution.py  plunge.py  shift.py  training.py  view.py
client/src/report/plot/lib/: export.py
client/src/report/plot/misc/: rotation_animation.py
client/src/training/: __main__.py  dataset.py  datasets.py  defs.py  network.py  plot.py  train.py
client/src/training/networks/: lstm.py  mlp.py
drone_relay/src/: __main__.py  file.py  send.py
hardware_mesh/: package.xml  setup.cfg  setup.py
hardware_mesh/hardware_mesh/lib/: async_node.py  async_utils.py
hardware_mesh/hardware_mesh/nodes/: load_cell.py  robot_arm.py  wind_shape.py
hardware_mesh/hardware_mesh/utils/: math.py
hardware_mesh/launch/: all_nodes.yaml
hardware_mesh_interfaces/: CMakeLists.txt
hardware_mesh_interfaces/msg/: LoadCellData.msg  RobotArmPose.msg
hardware_mesh_interfaces/srv/: RobotArmTool.srv  WindShape.srv
orchestrator/: Cargo.toml  build.rs
orchestrator/.cargo/: config.toml
orchestrator/src/: audio.rs  config.rs  data.rs  defs.rs  lib.rs  main.rs  recorder.rs  recording.rs  server.rs
orchestrator/src/assets/: buzzer.aac  complete.aac  error.aac
orchestrator/src/cli/: common.rs  config.rs  convert.rs  examples.rs  export.rs  extract.rs  measure.rs  mod.rs  plot.rs  run.rs  server.rs  test.rs  view.rs
orchestrator/src/data/: experiment.rs  mod.rs  orchestrator.rs  plot.rs  processing.rs  run.rs  session.rs  sink.rs  time.rs
orchestrator/src/hardware/: load_cell.rs  mock_counter.rs  mod.rs  robot_arm.rs  wind_shape.rs
orchestrator/src/hardware/additional_device/: mod.rs  protocol.rs
orchestrator/src/hardware/example_counter/: mod.rs
orchestrator/src/hardware/load_cell/: defs.rs  mod.rs  protocol.rs
orchestrator/src/hardware/motion_capture/: mod.rs  nat_net.rs  protocol.rs
orchestrator/src/hardware/robot_arm/: defs.rs  mod.rs  protocol.rs
orchestrator/src/hardware/wind_shape/: mod.rs  protocol.rs
orchestrator/src/learn/: model.rs
orchestrator/src/misc/: buf.rs  mod.rs  plot_juggler.rs  serde.rs
orchestrator/src/orchestrator/: mod.rs
orchestrator/src/server/: mod.rs
orchestrator/src/train/: model.rs
orchestrator_py/src/experiments/: actuate_drone.py  coupled_axis.py  drone_pitch.py  free_flight.py  motion_capture.py  pitch_coupled.py  pitch_forward.py  sleep.py  test_axis.py
orchestrator_py/src/orchestrator/: __main__.py  helpers.py  instructions.py  orchestrator.py  terminal.py
server/: .gitignore  Cargo.toml
server/src/: config.rs  lib.rs
server/src/assets/: end.aac  notification.aac
staubli-remote-control/: .outlining.json  RemoteControl.dtx  RemoteControl.pjx  decodeBlend.pgx  decodeConfig.pgx  decodeDesc.pgx  decodeLocation.pgx  decodePose.pgx  decodeTool.pgx  encodeJoint.pgx  encodePoint.pgx  init.pgx  motionReporter.pgx  motionSupervisor.pgx  motionWorker.pgx  movingReporter.pgx  sendAck.pgx  sendComplete.pgx  sendError.pgx  sendMoving.pgx  sendPowerOff.pgx  sendStatus.pgx  socketHandler.pgx  start.pgx  stop.pgx
support/: requirements.txt
support/export_helper/: __main__.py
support/hardware_mesh/: setup.py
support/hardware_mesh_interfaces/: CMakeLists.txt  package.xml
support/machine-learning/: __main__.py  defs.py
support/pipeline/: __main__.py  augment.py  dataset.py  defs.py  model.py  process.py  utils.py  worker.py
support/remote-control/: RemoteControl.dtx  RemoteControl.pjx  decodeBlend.pgx  decodeConfig.pgx  decodeDesc.pgx  decodeLocation.pgx  decodePose.pgx  decodeTool.pgx  encodeJoint.pgx  encodePoint.pgx  init.pgx  motionReporter.pgx  motionSupervisor.pgx  motionWorker.pgx  movingReporter.pgx  sendAck.pgx  sendError.pgx  sendMoving.pgx  sendPowerOff.pgx  sendStatus.pgx  socketHandler.pgx  start.pgx  stop.pgx
support/report/: estimate_shift.py  scatter3.py
workbench/: plot_calibrated.py
(+32 files in other folders)
