[package]
name = "drone-lab"
version = "0.2.0"
edition = "2024"
default-run = "drone-lab"

[dependencies]
async-trait = "0.1"
axum = "0.8"
bincode = "2"
butterworth = "0.1"
bytes = "1"
chrono = "0.4"
chunked-bytes = "0.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
nalgebra = "0.33"
polars = { version = "0.47", features = ["csv", "parquet"] }
quaternion = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
