[package]
name = "drone-lab"
version = "0.2.0"
edition = "2024"
default-run = "drone-lab"

[dependencies]
async-trait = "0.1"
bincode = "2"
butterworth = "0.1"
bytes = "1"
chrono = "0.4"
chunked-bytes = "0.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
nalgebra = "0.33"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.axum]
version = "0.8"
default-features = false
features = ["http1", "json", "tokio"]

[dependencies.polars]
version = "0.47"
default-features = false
features = ["csv", "parquet"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"]
